apps/frontend/demo/patches/next-frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: next-frontend
