apps/frontend/demo/patches/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  annotations:
spec:
  tls:
    - hosts:
        - demo.jakubkubacki.com
      secretName: frontend-tls
  rules:
    - host: demo.jakubkubacki.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend
                port:
                  number: 3000
